--- a/drill-3/index.html
+++ b/drill-3/index.html
@@ -1,1 +1,33 @@
-<!-- be sure to look at the example gif as well -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drill 3</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="parent">
+        <div class="gray">
+            <div class="box"></div>
+        </div>
+        <div class="white">
+            <p>Lorem ipsum dolor sit amet, ea semper laoreet posidonium vel, cetero placerat ut quo. Aperiam eligendi id est, nobis consectetuer te quo. No odio prima qui. Eu mea saperet suscipit, ut verear corpora mei.
+
+                Ne per alii debet propriae. In vel utamur delenit. Lucilius complectitur at vim, qui graece praesent qualisque te. No albucius petentium disputationi duo, vel ad nihil patrioque prodesset. Ex sea clita nostro offendit, sea saepe similique at. Eu nostro omittantur persequeris sea.
+                
+                Nam et minim blandit adversarium, nec eros voluptua an. Ut sed mazim albucius lucilius. Eum velit percipit ut, cu autem essent mel, no corpora detraxit incorrupte pri. Eu pri laudem facilisi. Nihil dolores cu est, mei ei sonet oporteat gubergren. Virtute aliquam feugait cu sea. Cu vix quem veritus, vis choro eripuit consequat id.
+                <br><br>
+                Ne per vidit dictas patrioque, omnis malis ea ius, nam commodo senserit ea. Minim graeco putant ex per, hinc ludus ut est. Eos feugiat epicuri vituperata ut. Luptatum perfecto in sed, at hinc brute volumus pri. Vix tation suscipiantur interpretaris te, ad nec vocibus abhorreant necessitatibus. Aperiam dissentias nam ex, justo summo democritum eum ea, quo quis numquam bonorum te.
+                
+                Id justo denique gloriatur nec. Molestiae deterruisset et qui, in has laudem noluisse, at pro tempor ancillae electram. Mel an decore nemore semper, quodsi vocibus sit at. Agam cetero accumsan mel in, ut dicta probatus eloquentiam mel, zril dictas delicata sed ut. Eos an percipit consequuntur.</p>
+        </div>
+        <div class="bar blue"></div>
+        <div class="bar teal"></div>
+        <div class="bar grn"></div>
+        <div class="bar yel"></div>
+        <div class="black">?</div>
+    </div>
+</body>
+</html>
